--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
-/*on pipline options for mobile, can use >> to open further*/
-
-
-
 * {
-  margin: 0;
   box-sizing: border-box;
+  margin: 0;
   padding: 0;
 }
 
 body {
-  height: 1550px;
   display: grid;
-  grid-template-columns: repeat(2, 200px calc(100% - 200px));
   font-family: 'Open Sans', sans-serif;
+  grid-template-columns: 200px calc(100% - 200px);
+  height: 1600px;
 }
 
 aside {
@@ -21,9 +17,9 @@ aside {
 }
 
 .job-boards, .nav-item:hover {
-  color: white;
-  border-left: #4CACF2 solid 2px;
   background-color: #313949;
+  border-left: #4CACF2 solid 2px;
+  color: white;
   cursor: pointer;
   padding-left: 8px !important;
 }
@@ -33,18 +29,18 @@ aside section:not(.nav-section-categories) {
 }
 
 .profile-section {
-  height: 200px;
-  display: flex;
   align-items: center;
-  justify-content: center;
+  display: flex;
   flex-direction: column;
+  height: 200px;
+  justify-content: center;
 }
 
 .profile-img {
-  height: 90px;
-  width: 90px;
   border-radius: 50px;
+  height: 90px;
   margin-bottom: 10px;
+  width: 90px;
 }
 
 .profile-user:hover {
@@ -58,20 +54,20 @@ nav section {
 
 .nav-title {
   font-size: .8rem;
-  padding-left: 10px;
   padding-bottom: 5px;
+  padding-left: 10px;
 }
 
 .nav-item {
-  display: flex;
   align-items: center;
+  display: flex;
   padding: 5px 0 5px 10px;
 }
 
 .icon-div {
-  width: 20px;
-  text-align: center;
   margin-right: 10px;
+  text-align: center;
+  width: 20px;
 }
 
 .fa-check-square {
@@ -90,38 +86,27 @@ nav section {
   color: #4CA88B;
 }
 
-
-
-
-
-
-
-
-
-
 main {
   background-color: #EEF2F6;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 90px 200px 360px 2px 900px;
-}
+ }
 
 .nav-search {
-  display: grid;
-  grid-template-columns: 10% 60% 10% 10% 10%;
+  background-color: white;
   border-bottom: 1px solid lightgray;
   color: #959AA0;
+  display: grid;
   font-size: 1.5rem;
-  background-color: white;
+  grid-template-columns: 10% 60% 10% 10% 10%;
 }
-
 
 .nav-search-article:hover:not(.nav-input-article) {
   background-color: #48A2F1;
   color: white !important;
   cursor: pointer;
 }
-
 
 .nav-input-article, .nav-search-article {
   border-left: 1px solid lightgray;
@@ -133,23 +118,23 @@ main {
 }
 
 .nav-search-article {
-  display: flex;
   align-items: center;
+  display: flex;
   justify-content: center;
 }
 
 .nav-input-article {
-  display: flex;
   align-items: center;
+  display: flex;
   padding-left: 5%;
 }
 
 input {
   border: none;
-  height: 89px;
-  width: 100%;
-  margin-left: 10px;
   font-size: 1.1rem;
+  height: 89px;
+  margin-left: 10px;
+  width: 100%;
 }
 
 input:focus {
@@ -157,12 +142,9 @@ input:focus {
 }
 
 input::placeholder {
-  font-size: 1.1rem;
   font-family: 'Open Sans', sans-serif;
+  font-size: 1.1rem;
 }
-
-
-
 
 .nav-dashboard {
   background-color: white;
@@ -173,10 +155,10 @@ input::placeholder {
 }
 
 .dashboard-div {
+  align-items: center;
   display: flex;
   justify-content: space-between;
   margin: 50px 50px 0 50px;
-  align-items: center;
 }
 
 .job-title-h1 {
@@ -190,47 +172,47 @@ input::placeholder {
 
 .preview {
   color: #80C0F0;
-  font-weight: 600;
   cursor: pointer;
+  font-weight: 600;
 }
 
 .dashboard-btns-article {
+  align-self: flex-start;
   display: flex;
+  margin-top: 7px;
 }
-
 
 .fa-circle {
   color: #9BC95C;
 }
 
 .btn, .open-btn { 
+  align-items: center;
+  align-self: center;
   border-radius: 50px;
   border: 1px solid gray;
   display: flex;
-  align-items: center;
   justify-content: center;
   margin-left: 20px;
-  align-self: center;
 }
 
 .open-btn {
-  width: 100px;
-  height: 40px;
   font-weight: 600;
+  height: 40px;
   justify-content: space-between;
   padding: 0 15px;
+  width: 100px;
 }
 
 .btn {
-  width: 40px;
   height: 40px;
+  width: 40px;
 }
 
 .open-btn:hover,
 .btn:hover {
   background-color: #efefef;
   cursor: pointer;
-
 }
 
 .dashboard-pipeline-article {
@@ -245,13 +227,15 @@ input::placeholder {
   padding: 10px 0;
 }
 
-.summary-p, .dashboard-pipeline-article p:hover {
+.summary-p, .dashboard-pipeline-article p:not(.chevron-right):hover {
   border-bottom: 4px solid #48A2F1;
-  cursor: pointer;
   color: black;
+  cursor: pointer;
 }
 
-
+.chevron-right {
+  display: none;
+}
 
 
 .chart-section {
@@ -259,24 +243,23 @@ input::placeholder {
   grid-template-columns: 58% 42%;
 }
 
-
 .circle-chart-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  width: 650px;
-  margin: 40px;
   justify-items: center;
+  margin: 40px;
+  max-width: 1000px;
 }
 
 .circle-chart {
-  width: 180px;
   height: 180px;
+  width: 180px;
 }
 
 .circle-chart__circle {
   animation: circle-chart-fill 2s reverse; 
-  transform: rotate(90deg); 
   transform-origin: center; 
+  transform: rotate(90deg); 
 }
 
 .circle-chart__info {
@@ -297,100 +280,98 @@ input::placeholder {
 }
 
 .totals-btn-div {
-  grid-column-start: 2;
   grid-column-end: 3;
+  grid-column-start: 2;
 }
-
 
 .totals-btn {
+  margin-top: 54px;
   width: 230px;
-  margin-top: 42px;
-}
-
-.applicants-btn {
-  width: 150px;
-  margin-top: 33px;
 }
 
 .chart-btn {
-  height: 40px;
-  font-weight: 600;
-  font-size: .9rem;
+  align-items: center;
+  background-color: white;
   border-radius: 50px;
   border: 1px solid gray;
   display: flex;
-  background-color: white;
-  align-items: center;
+  font-size: .9rem;
+  font-weight: 600;
+  height: 40px;
   justify-content: center;
 }
 
 .chart-btn:hover {
-  cursor: pointer;
   background-color: #efefef;
+  cursor: pointer;
+}
+
+.bar-chart-section {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .bar-chart-div {
   background-image: url(images/chart.png);
-  background-size: cover;
   background-position: center;
+  background-size: cover;
   height: 230px;
-  width: 465px;
   margin-top: 10px;
+  width: 465px;
 }
 
 .applicants-btn-div {
-  width: 100%;
   display: flex;
   justify-content: center;
-  margin-right: 37px;
+  width: 100%;
 }
 
-
+.applicants-btn {
+  width: 150px;
+}
 
 hr {
-  border: none;
-  border-top: 1px solid gray;
+  border-style: solid;
+  color: #D2DAE2;
+  height: 2px;
+  margin: 0 5%;
   overflow: visible;
   text-align: center;
-  height: 5px;
-  margin: 0 5%;
 }
 
 hr:after {
-
-  content: "\f139";
-  font-family: FontAwesome;
-  color: gray;
-  background: #EEF2F6;
-  padding: 0 10px;
+  background-size: 20px 20px;
+  background: #EDF2F6 url(images/white-chevron.svg)  no-repeat scroll center;
+  content: " ";
+  cursor: pointer;
+  display: inline-block;
+  fill: red;
+  font-size: 1.5em;
+  height: 20px;
+  padding:  0 2%;
   position: relative;
-  top: -13px;
-
+  top: -11px;
 }
-
-
-
 
 .bottom-section {
   display: grid;
-  grid-template-columns: 70% 25%;
-  grid-gap: 5%;
+  grid-template-columns: 70% 30%;
   margin: 50px 5%;
 }
 
-
 .job-details-section {
   background-color: white;
+  border-bottom: 1px solid #727E93;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(10, 1fr)
   justify-items: center;
-  border-bottom: 1px solid #727E93;
+  margin-right: 5%;
 }
 
 .job-details-article, .job-description-article {
-  display: flex;
   align-items: center;
+  display: flex;
 }
 
 .job-details-article {
@@ -398,28 +379,29 @@ hr:after {
 }
 
 .garbage-div {
+  align-items: center;
   border-bottom: solid 1px #727E93; 
   display: flex;
-  align-items: center;
   height: 100%;
   margin: 0 40px;
-  width: 90%;
+  width: 100%;
 }
 
 .row-header-div {
-  width: 160px;
-  height: 60px;
-  display: flex;
   align-items: center;
+  display: flex;
   font-weight: 600;
+  height: 60px;
+  width: 160px;
 }
 
 .row-details-div {
-  height: 100%;
-  display: flex;
   align-items: center;
-  padding-left: 2%;
+  display: flex;
+  height: 100%;
+  padding-left: 0%;
 }
+
 
 .job-description-article {
   background-color: #727E93;
@@ -429,17 +411,17 @@ hr:after {
 
 .edit-btn {
   background-color: #7E8AA3;
-  color: white;
   border: none;
+  color: white;
+  font-size: .9rem;
+  height: 40px;
   outline: none;
   width: 80px;
-  height: 40px;
-  font-size: .9rem;
 }
 
 .edit-btn:hover {
-  cursor: pointer;
   background-color: darkgray;
+  cursor: pointer;
 }
 
 .edit-pen {
@@ -461,13 +443,13 @@ hr:after {
 }
 
 .img-div {
+  background-image: url(images/fred.jpg);
+  background-position: center;
+  background-size: 80px 55px, cover;
   border-radius: 50px;
   height: 50px;
-  width: 50px;
-  background-image: url(images/fred.jpg);
-  background-size: 80px 55px, cover;
-  background-position: center;
   margin-right: 2%;
+  width: 50px;
 }
 
 .hiring-lead-details {
@@ -482,40 +464,43 @@ hr:after {
   font-weight: 800;
 }
 
-
-
-
 .social-media-section {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 25% 75%;
 }
 
-
 .social-media-btns {
+  cursor: pointer;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
-  cursor: pointer;
 }
 
 .social-media-btns article {
-  display: flex;
   align-items: flex-start;
+  display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .social-media-btns div {
+  color: white;
   height: 60px;
   width: 100%;
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
 }
 
+.social-media-btns p {
+  margin-top: 20px;
+  text-align: center;
+  width: 90%;
+}
 
+.social-media-btns i {
+  float: left;
+  padding-top: 22px;
+  padding-left: 20px;
+}
 
 .fab {
 }
@@ -533,25 +518,19 @@ hr:after {
   background-color: #3681B7;
 }
 
-
-
-
-
-
-
 .media-linking-section {
+  color: #727E93;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
-  color: #727E93;
 }
 
 .media-linking-article {
   border-bottom: 1px solid #727E93;
-  margin-top: 10px;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: center;
+  margin-top: 10px;
 }
 
 .media-linking-article div {
@@ -575,24 +554,24 @@ hr:after {
 }
 
 .link-p {
-  background-color: white;
-  width: 80%;
-  justify-content: flex-start;
-  height: 50px;
-  display: flex;
   align-items: center;
+  background-color: white;
+  display: flex;
+  height: 50px;
+  justify-content: flex-start;
   padding-left: 10px;
+  width: 80%;
 }
 
 .media-linking-section button {
-  width: 20%;
   background-color: #66B5C0;
-  font-size: .9rem;
+  border: none;
   color: white;
   cursor: pointer;
   font-family: 'Open Sans', sans-serif;
+  font-size: .9rem;
   outline: none;
-  border: none;
+  width: 20%;
 }
 
 .email-p {
@@ -601,4 +580,298 @@ hr:after {
 
 .email-article {
   padding-bottom: 0;
+}
+
+@media(max-width: 1380px) {
+  aside {
+    display: none;
+  }
+
+  #caret {
+    color: gray;
+  }
+
+  body {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+@media(max-width: 1200px) {
+  
+  main {
+    grid-template-rows: 90px 200px 730px 2px 900px;
+ }
+
+  .bottom-section {
+    margin: 50px 2% 50px 2%;
+ }
+
+  .chart-section {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: 1fr 1fr; 
+  }
+
+  .circle-chart-wrapper {
+    justify-self: center;
+    max-width: 700px; 
+  }
+
+  .bar-chart-section {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-bottom: 50px;
+  }
+
+  .applicants-btn {
+    margin-top: 33px;
+  }
+
+  .dashboard-pipeline-article p {
+    font-size: .8rem;
+  }
+
+  .btn {
+    font-size: .9rem;
+    height: 30px;
+    margin-left: 10px;
+    width: 30px;
+  }
+
+  .open-btn {
+    font-size: .9rem;
+    height: 30px;
+    width: 85px;
+  }
+
+  .job-details-section {
+    margin-right: 3%;
+  }
+}
+
+@media(max-width: 880px) {
+
+  .minimize-p {
+    display: none;
+  }
+
+  .dashboard-pipeline-article p {
+    align-self: center;
+  }
+
+  .chevron-right {
+    cursor: pointer;
+    display: unset;
+    font-size: 1.3rem !important;
+  }
+
+  .chevron-right:hover {
+    color: lightgray;
+  }
+
+  .dashboard-btns-article {
+    align-items: flex-end;
+    flex-direction: column;
+  }
+
+  .dashboard-btns-article .btn {
+    align-self: flex-end;
+    margin-top: 10px;
+  }
+
+  .job-title-article {
+    align-self: flex-start;
+  }
+
+  .dashboard-div {
+    margin-top: 20px;
+  }
+
+  main {
+    grid-template-rows: 90px 200px 730px 2px 1250px;
+ }
+
+  .bottom-section {
+    grid-template-columns: 1fr;
+  }
+
+  .social-media-section {
+    grid-template-columns: 1fr 1fr;
+    height: 550px;
+    margin-top: 50px;
+  }
+
+  .social-media-btns {
+    align-content: center;
+    height: 250px;
+    padding-top: 15px;
+    width: 300px;
+  }
+
+  .media-linking-section {
+    height: 500px;
+    width: 350px;
+  }
+
+    .media-linking-article {
+      margin-top: 0;
+    }
+}    
+
+@media(max-width: 730px) {
+  main {
+    grid-template-rows: 140px 250px 1020px 2px 2050px;
+    width: 320px;
+  }
+
+  main nav {
+    width: 320px;
+  }
+
+  .nav-search {
+    border-bottom: 1px solid lightgray;
+    color: #959AA0;
+    display: grid;
+    font-size: 1.2rem;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: 70px 70px;
+  }
+
+  .nav-search-article {
+    border-top: 1px solid lightgray;
+  }
+
+ .nav-search-article input {
+  height: 68px;
+  font-size: .9rem;
+
+  }
+
+  .nav-input-article {
+    grid-column-start: 1;
+    grid-column-end: 5;
+  }
+
+  .hamburger {
+    grid-row-start: 2;
+  }
+
+  .add-user {
+    grid-row-start: 2;
+  }
+
+  .calendar {
+    grid-row-start: 2;
+  }
+
+  .nine {
+    grid-row-start: 2;
+  }
+
+  .dashboard-pipeline-article p {
+    margin-left: 15px;
+    padding: 5px 0;
+  }
+
+  .dashboard-div {
+    display: flex;
+    flex-direction: column;
+    height: 150px;
+    justify-content: space-between;
+    padding-left: 10px;
+    margin: 0;
+    width: 100%;
+  }
+
+  .job-title-h1 {
+    font-size: 1.1rem;
+    padding-top: 30px;
+  }
+
+  .dashboard-btns-article {
+    flex-direction: row;
+    width: 100%;
+  }
+
+  .job-details-section {
+    align-self: center;       
+    width: 320px;
+  }
+
+  .garbage-div {
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+  }
+
+  .row-header-div, .description-header-div, .hiring-lead-details {
+    display: flex;
+    justify-content: center;
+  }
+
+  .description-header-div {
+    align-self: auto;
+  }
+
+  .description-details-div {
+    padding: 0 2%;
+  }
+
+  .row-details-div, .hiring-lead-details {
+    margin: 0 0 20px 0;
+  }
+
+  .social-media-section {
+    display: flex;
+    flex-direction: column;
+    height: 900px;
+    padding-left: 10px;
+  }
+
+  .media-linking-section {
+    margin-top: 50px;
+    padding-left: 10px
+    width: 100%;
+  }
+
+  .media-linking-article {
+    width: 300px;
+  }
+
+  .chart-section {
+    width: 320px;
+  }
+
+  .bottom-section {
+    margin-left: 0;
+    margin-right: 0;
+    width: 320px;
+  }
+
+  .circle-chart-wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .bar-chart-div {
+    height: 144px;
+    width: 300px;
+  }
+
+  .btn, .open-btn {
+    margin-left: 0;
+  }
+
+  .dashboard-btns-article {
+    justify-content: space-between;
+    width: 80%;
+  }
+
+  .dashboard-btns-article .btn {
+    margin-top: 0;
+  }
 }
